@@ -1,3 +1,8 @@
+2006-12-13  Leo  <sdl.web@gmail.com>
+
+	* erc.el (erc-iswitchb): Temporarily enable iswitchb mode if it
+	isn't active already, instead of leaving it on.
+
 2006-12-10  Juanma Barranquero  <lekktu@gmail.com>
 
 	* erc-ezbounce.el (erc-ezb-init-session-list): Doc fix.
